3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Merge patch #1558073: newpickup flesh courtesy bencha
 include/define.h
 server/c_object.c player.c
Ryo 2006-11-29

Implement feature request #1555887: Thief player - should have bargaining as default skill
 lib/treasures: add skill to class items.
Ryo 2006-11-26

Fix bug #1539207: "Max speed" attribute does not work
 common/living.c: armor's max_speed should always be taken into account.
Ryo 2006-11-26

Fix indentation and comments, cosmetic changes only.
 common/living.c
 server/pets.c:
Ryo 2006-11-26

Fix bug #1599307:
server/shop.c: In pay_from_container() handle non-standard MONEY objects when
   buying items.
Andreas Kirschbaum 2006-11-19

socket/info.c: In draw_ext_info() do not crash for out of memory.
Andreas Kirschbaum 2006-11-19

server/rune.c: If skill is NULL in dispel_rune(), just return as server
  will otherwise crash in trap_disarm()
server/spell_util.c: Fix bug in that runes that hold other spells (glyphs,
   firetraps, magic runes, etc) do not find a skill object, and thus
   player doesn't get exp.  Instead, for runes, try to find owner, and
   then the relevant skill object.
MSW 2006-11-18

Documentation tweaks.
 include/object.h: doxygen-like comments.
 Doxyfile: created with some defaults.
Ryo 2006-11-18

Rename fix_player to fix_object, since it works for other items.
 common/item.c living.c object.c
 include/define.h libproto.h skills.h
 server/apply.c attack.c c_misc.c c_object.c c_wiz.c disease.c gods.c
  login.c player.c plugins.c shop.c skills.c skill_util.c spell_attack.c
  spell_effect.c time.c
Ryo 2006-11-18


Fix bug #598649: Building apartments use multiple materials per tile