@@ -17,6 +17,15 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix for bug #1569017: Healing gives grace cost to target.
+Information sent to client is now stored in a special structure, to not
+ conflict with spell fields. Note that this doesn't fix player files.
+ common/player.c: free spell information, new function for spell state.
+ include/libproto.h: new function.
+ include/player.h: new structure, new field in player structure.
+ socket/request.c: use spell information instead of spell fields.
+Ryo 2006-12-02
+
 Merge patch #1558073: newpickup flesh courtesy bencha
  include/define.h
  server/c_object.c player.c
